<resources>
    <string name="app_name">Time Tracker</string>
    <string name="start">Start</string>
    <string name="start_time">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="description">Description</string>
    <string name="project_name">Project name</string>
    <string name="workflow_name">Workflow name</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="notificationTitle">Timer Running</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="scroll_view_description">Scrollable area containing workflow and project data charts</string>
    <string name="FIRST_PAGE_NAME">Timer</string>
    <string name="SECOND_PAGE_NAME">Time Analysis</string>
    <string name="total_time_0">Total Time: 0</string>
</resources>